--- a/Client/school/package.json
+++ b/Client/school/package.json
@@ -10,12 +10,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "arraybuffer-mime": "^1.0.0",
     "context": "0.0.1",
     "date-fns": "^2.16.1",
+    "form-data": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
+    "material-table": "^1.69.1",
     "material-ui": "^0.20.2",
+    "node-base64-image": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
