--- a/Client/school/package.json
+++ b/Client/school/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "arraybuffer-mime": "^1.0.0",
+    "chart.js": "^2.9.4",
+    "chartjs": "^0.3.24",
     "context": "0.0.1",
     "date-fns": "^2.16.1",
     "form-data": "^3.0.0",
@@ -22,6 +24,7 @@
     "material-ui": "^0.20.2",
     "node-base64-image": "^2.0.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
     "react-redux": "^7.2.1",
