--- a/Client/school/package.json
+++ b/Client/school/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^4.1.1",
     "arraybuffer-mime": "^1.0.0",
     "chart.js": "^2.9.4",
     "chartjs": "^0.3.24",
@@ -27,12 +28,16 @@
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
+    "react-loader-spinner": "^3.1.14",
+    "react-notifications-component": "^2.4.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-window": "^1.8.6",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
