--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,8 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "socket.io": "^2.3.0",
+    "socketio": "^1.0.0"
   }
 }
